--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script   	src="https://code.jquery.com/jquery-3.3.1.min.js"
-  				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  				crossorigin="anonymous"> </script>
-  	<script src= "assets/javascript/app.js"> </script>
+	<link rel="stylesheet" href="assets/css/style.css">
+	
 
 </head>
 <body>
+<div id= "showGame">
+
+	<div class="jumbotron" id="View1">
+  <h1 class="display-4">Trivia Time</h1>
+  <p class="lead">If you're ready to test your knowledge of some popular 90s cartoon shows click the button below and let's see how much you remember!</p>
+  <hr class="my-4">
+  <p>You've got two minutes to answer 8 questions!</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button" id="gameStart">Start Game</a>
+  </p>
+</div>
+
 <div class="jumbotron jumbotron-fluid" style="background-color:#FFFF80">
   <div class="container">
     <h1 class="display-4">90s Cartoon Trivia!!</h1>
@@ -176,8 +186,23 @@
 </div>
 </div>
 </div>
-<button class="submit" onclick="return handleClick();" type="submit">Submit</button>
+</div>
+<button class="submit" id="score" onclick="return handleClick();" type="submit">Submit</button>
+</div>
 </div>
 </form>
+</div>
+
+<div class="jumbotron jumbotron-fluid" id="scoreboard">
+  <div class="container">
+    <h1 class="display-4">Your Score</h1>
+    <p class="lead">" "</p>
+  </div>
+</div>
+
+<script   	src="https://code.jquery.com/jquery-3.3.1.min.js"
+  				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  				crossorigin="anonymous"> </script>
+  	<script src= "assets/javascript/app.js"> </script>
 </body>
 </html>
